# langchain-ai-demo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md
data/embeddings/: 112140.txt  137739.txt  25274.txt  31490.txt  44061.txt  5289.txt  59389.txt  67888.txt  70971.txt  75452.txt
documents/: README.md
src/co_genticai/config/: appliances.py  cuisine_preferences.py  ingredients.py  meal_types.py  settings.py  time_ranges.py
src/co_genticai/examples/: embedding_mgt.py  multi_model_pinecone_demo.py  pinecone_manager_demo.py  rag_workflow_demo.py
src/co_genticai/rag/: embedding_manager.py  embeddings.py  pinecone_manager.py  vector_storage.py
